[tool.poetry]
name = "flask_template"
version = "0.1.0"
description = "flask project template"
authors = ["Th1Alexandre <th1alexandre.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flasgger = "^0.9.7"
sqlalchemy = "^2.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.3.2"
psycopg = {extras = ["binary"], version = "^3.1.9"}

[tool.poetry.group.prod.dependencies]
psycopg = {extras = ["c"], version = "^3.1.9"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py311']


[tool.isort]
profile = "black"


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true


[tool.flake8]
max-line-length = 88
max-complexity = 10
